# Deeplearning-assignments

Asignment 1 - Penguins Weight Prediction/: 1.1_research_data.ipynb  1.3_tersorflow_keras.ipynb
Assignment 1 - Penguins Weight Prediction/: 1.3_tersorflow_keras.ipynb
Assignment 2 - Movie Poster Genre Classification/: 2.1_introduction.ipynb
Assignment 3 - Text Translator/: 3.1_introduction.ipynb  3.2_rnn.ipynb  3.3_transformer.ipynb  pyproject.toml  test.ipynb
Assignment1/: 1.1_research_data.ipynb  1.2_neuralnetwork.ipynb  pyproject.toml
Assignment1/data/: data.xlsx
Assignment2 - Movie Poster Genre Classification/: .gitignore  2.1_introduction.ipynb  2.2_custom_model.ipynb  2.3_pretrained_model.ipynb  preprocess.ipynb  pyproject.toml
Assignment2 - Movie Poster Genre Classification/data/: data.xlsx
Part 1/Assignments/Assignment 1 - Penguins Weight Prediction/: Assignment 1.docx
Part 1/Assignments/Assignment 2 - Movie Poster Genre Classification/: 2.2_custom_model.ipynb  2.3_pretrained_model.ipynb  Assignment 2.docx
Part 1/Assignments/Assignment 3 - Text Translator/: .gitignore  3.2_rnn.ipynb  3.3_transformer.ipynb  Assignment 3.docx  cuda.ipynb  cuda.py  pyproject.toml  utils.py
Part 1/Slides/Week 1 - Introduction/: Introduction Minor Deep Learning.pptx  Lecture 2 - Data mining workflow and applications.pptx
Part 1/Slides/Week 2 - Fundementals & Math/: Deep Learning fundamentals and math 2.pptx
Part 1/Slides/Week 3 - Keras and Tenserflow/: Session_II_Keras_tensorflow_basics_MC.ipynb  pima-indians-diabetes (1).csv
Part 1/Slides/Week 4 - Conventional Neural Network (CNN)/: CV_CNN_based_Multiclass_Classifier_with_CIFAR_10_complete.ipynb
Part 1/Slides/Week 5 - Pretrained Models/: README.MD  Using pretrained Models DL.pptx
Part 1/Slides/Week 6 - Recurrent Neural Network (RNN)/: Deep Learning for text.pptx
Part 1/Slides/Week 7 - Transformers & Generative Ai/: Transformers.pptx
Part 2/Slides/Week 1/: Hyperparameter tuning.pptx  Tuner.py
Part 2/Slides/Week 3/: Image_Processing_Basics_Session_1.ipynb
Part 2/Slides/Week 7/: Diffusion_model.ipynb
Scripts/: VGG Pretrained model.ipynb
Slides/Part1/Week 1 - Introduction/: Lecture 1 - Introduction to Deep Learning.pptx
Slides/Part1/Week 3 - Keras and Tenserflow/: Keras-tensorflow-Ams 2025.pptx  (+2 more)
(+5 files in other folders)
