[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
authors = ["David <davidoutdeveloper@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
matplotlib = "^3.8.0"
scikit-learn = "^1.4.0"
numpy = "~=2.0.2"
keras = "^3.8.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
