[tool.poetry]
name = "assignment 3 - text translator"
version = "0.1.0"
description = ""
authors = ["David Out <738974@student.inholland.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
openpyxl = "^3.1.2"
# tensorflow = "2.12.0"  # Specific version to ensure compatibility
tensorflow-io-gcs-filesystem = "0.31.0"  # Compatible with TF 2.12
numpy = "1.23.5"  # Keep this as is
scikit-learn = "^1.3.0"
opencv-python = "^4.8.0"
seaborn = "^0.12.2"
keras = "2.12.0"  # Adding explicit keras version to match TF
pandas = "^2.2.3"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"